# Squig-Model-Server

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  config.toml
.github/workflows/: release.yml
scripts/: build-linux.sh  build-windows.ps1
src/: config.rs  lib.rs  main.rs  server.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: gen_icons.py  icon.icns
src-tauri/splash/: index.html
src-tauri/src/: lib.rs  main.rs
src/api/: chat.rs  completions.rs  devtools.rs  embeddings.rs  health.rs  huggingface.rs  management.rs  mod.rs  models.rs  optimize.rs  web_search.rs
src/inference/: engine.rs  hardware.rs  mod.rs  smart_defaults.rs  types.rs
src/models/: huggingface.rs  mod.rs  registry.rs
src/ui/: mod.rs
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.svelte
ui/src/components/: AutoOptimize.svelte  ChatPanel.svelte  DevPanel.svelte  HFSearchPanel.svelte  HardwarePanel.svelte  HelpGuide.svelte  MetricsPanel.svelte  ModelCard.svelte  PerfMonitor.svelte  ServerPanel.svelte
ui/src/lib/: api.js
