[package]
name = "squig-model-server-desktop"
version = "0.2.0"
description = "Squig Model Server - Desktop App"
authors = ["Squig-AI"]
license = "MIT"
edition = "2021"

[lib]
name = "squig_model_server_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Filesystem
dirs = "5"

# Our server library
squig-model-server = { path = ".." }
